# predictive_maintenance_app

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
notebooks/: 01_EDA.ipynb
pages/: 1_Fleet_Overview.py  2_Machine_Diagnostics.py  3_Manual_Simulator.py
src/: data_processing.py  inference.py  model_training.py
